--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
     <string name="start">Start</string>
     <string name="open">Open</string>
     <string name="current_workout">Current Workout:</string>
+    <string name="welcome_to_exercisecounter">Welcome to ExerciseCounter!</string>
+    <string name="no_history">No history</string>
+    <string name="workout_history1">Workout history</string>
+    <string name="delete">Delete</string>
 </resources>
